--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Logs
+.vscode
 logs
 *.log
 npm-debug.log*
@@ -44,6 +45,9 @@ typings/
 
 # Optional eslint cache
 .eslintcache
+
+# ESLint Config File
+.eslintrc.json
 
 # Optional REPL history
 .node_repl_history
