--- a/package.json
+++ b/package.json
@@ -7,18 +7,32 @@
     "start": "nodemon ./app.js",
     "seed": "cross-env DB_ENABLE_LOGGING=true node './seed'"
   },
-  "keywords": [],
+  "keywords": [
+    "REST",
+    "API",
+    "JSON",
+    "NODE"
+  ],
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/d-bryan/rest-api-sql.git"
+  },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "promise.prototype.finally": "^3.1.1",
     "sequelize": "^5.21.1",
     "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1"
   }
 }
