--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "dependencies": {
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "nodemon": "^1.19.4",
     "promise.prototype.finally": "^3.1.1",
     "sequelize": "^5.21.1",
     "sequelize-cli": "^5.5.1",
